# risk-thinking-work-sample

./: .gitignore  Dockerfile  README.md  pyproject.toml  references.md  run_pipeline.sh
predictor/: Dockerfile  build_docker.sh  fly.toml  predict.py
tests/: test_data_format.py
train/: extract_feats.py  extract_feats_from_folder.py  folder_pipeline.py  load_data.py  load_data_into_folder.py  prefect_pipeline.py  train_model.py
